<resources>

    <string name="app_name">NYW_App</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- hint -->
    <string name="hint_set_pw_old">填写原密码</string>
	<string name="hint_set_pw_new">填写新密码</string>
	<string name="hint_set_pw_ok">再次填写确认</string>
  <!-- login -->
    <string name="login_hint1">用户名</string>
	<string name="login_hint2">密&#160;&#160;&#160;&#160;码</string>
	<string name="login_btn_name">登录</string>
  <!-- forget_pw -->
	<string name="forget_pw">忘记密码?</string>
	<string name="forget_pw_title">重置密码</string>
  <!-- main -->
	<string name="msg_title">消息</string>
	<string name="connection_title">报表</string>
	<string name="mine_title">我</string>
	<string name="mycenter">个人中心</string>
	<string name="setting">我的设置</string>
	<string name="set_pwd">修改密码</string>
	<string name="exit">退出系统</string>
  <!-- set_password -->
	<string name="set_pw_title">设置密码</string>
	<string name="set_pw_btn_name">确定</string>
	<string name="set_pw_old">原密码&#160;&#160;&#160;&#160;</string>
	<string name="set_pw_new">新密码&#160;&#160;&#160;&#160;</string>
	<string name="set_pw_ok">确认密码</string>
	<string name="set_pw_cod">两次密码填写不一致</string>
	<!-- popu_exit -->
	<string name="popu_exit_frist_title">关闭平台</string>
	<string name="popu_exit_frist_note">关闭后将不再接收新的消息</string>
	<string name="popu_exit_second_title">退出登录</string>
	<string name="popu_exit_second_note">注销或切换至其他账号登录</string>
	<!-- mine -->
	<string name="my_center_hint_title">未填写</string>
	<string name="my_center">个人信息</string>
	<string name="my_center_name_title">用户名</string>
	<string name="my_center_email_title">邮&#160;&#160;&#160;&#160;箱</string>
	<string name="my_center_phone_title">手机号</string>
	<string name="my_center_role_title">角&#160;&#160;&#160;&#160;色</string>
	<!-- setting -->
	<string name="setting_title">设置</string>
	<string name="setting_title_msg">消息提示</string>
	<string name="setting_title_about">关于本系统</string>
	<string name="setting_title_update">版本更新</string>
	<string name="setting_title_version">版本号</string>
	<!-- expense account -->
	<string name="add_expense_account">新建报销单</string>
	<string name="add_car">打车费</string>
	<string name="add_tour">差旅费</string>
	<string name="add_other">其他费用</string>
	<string name="date">日期</string>
	<string name="journey">路程</string>
	<string name="price">价格</string>
	<string name="addcar_add_btn_title">+添加</string>
	<string name="addcar_add_total">总计</string>
	<string name="addcar_add_title">报销单-打车费</string>
	<string name="addcar_add_btn">保存</string>
</resources>