<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dip"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/back_layout_normal_bg"
    android:id="@+id/popu_more_layout">
    
  <RelativeLayout 
    android:layout_width="200dip"
    android:layout_height="wrap_content"      
    android:background="@drawable/back_layout_press_bg" 

      >
   <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/menu_mine_text_size"
    android:textColor="@color/login_btn_color"
    android:layout_centerInParent="true"
    android:text="@string/add_expense_account"
      />   
  </RelativeLayout>
  <RelativeLayout 
    android:layout_width="200dip"
    android:layout_height="wrap_content"      
    android:background="@drawable/change_login_back_selector"  
    android:id="@+id/add_car_layout"
      >
   <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/menu_mine_text_size"
    android:textColor="@color/login_btn_color"
    android:layout_centerInParent="true" 
    android:text="@string/add_car"
      />   
  </RelativeLayout>  
    <RelativeLayout 
    android:layout_width="200dip"
    android:layout_height="wrap_content"      
    android:background="@drawable/change_login_back_selector" 
    android:id="@+id/add_tour_layout" 
      >
   <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/menu_mine_text_size"
    android:textColor="@color/login_btn_color"
    android:layout_centerInParent="true" 
    android:text="@string/add_tour"
      />   
  </RelativeLayout>
    <RelativeLayout 
    android:layout_width="200dip"
    android:layout_height="wrap_content"      
    android:background="@drawable/change_login_back_selector"  
    android:id="@+id/add_other_layout"
      >
   <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/menu_mine_text_size"
    android:textColor="@color/login_btn_color"
    android:layout_centerInParent="true" 
    android:text="@string/add_other"
      />   
  </RelativeLayout>

</LinearLayout>