<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_change_bg"
    android:id="@+id/mycanter_set_top_layout"
    android:orientation="horizontal"
     >
  <RelativeLayout 
    android:layout_width="50dip"
    android:layout_height="wrap_content"
    android:id="@+id/set_pw_back_layout"  
    android:background="@drawable/change_login_back_selector"       
      >
   <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"   	
    android:src="@drawable/back_image"
    android:background="#00000000"   
    android:layout_centerInParent="true"         
       />   
  </RelativeLayout> 
    <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"   
    android:src="@drawable/login_change_top_line"
    android:background="#00000000"   
    android:layout_centerVertical="true"
    android:layout_toRightOf="@+id/set_pw_back_layout"   
    android:id="@+id/mycanter_set_line"     
       />       
   <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="@dimen/title_size"
    android:textColor="@color/title_color"   
    android:layout_marginLeft="7dip"
    android:layout_centerVertical="true" 
    android:text="@string/set_pw_title" 
    android:layout_toRightOf="@+id/mycanter_set_line"  
       /> 
   <Button 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right|center_vertical"
    android:gravity="center"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingTop="5dip"
    android:paddingBottom="5dip"    
    android:background="@drawable/mycenter_set_btn_selector"   
	android:layout_alignParentRight="true"
	android:layout_centerVertical="true"
	android:layout_marginRight="15dip"
	android:text="@string/set_pw_btn_name"
	android:textColor="@color/mycenter_change_btn_text_color"
	android:textSize="@dimen/login_edit_size"
	android:id="@+id/set_pw_save_btn"
        />   
 </RelativeLayout>
 
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  
	android:layout_marginTop="40dip"
	android:layout_marginLeft="25dip"
	android:layout_marginRight="25dip"
      >
     <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="@dimen/menu_msg_title_size"
    android:textColor="@color/menu_mine_text_color"    
    android:layout_centerVertical="true"   
	android:id="@+id/set_pw_name_tv"
	android:text="@string/set_pw_old"
       />    
   <EditText 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:id="@+id/set_pw_old_edit"
    android:background="#00000000"
    android:hint="@string/hint_set_pw_old"
    android:textSize="@dimen/login_edit_size"
    android:maxLength="20"
    android:singleLine="true"
    android:textColorHint="@color/company_btn_color"
    android:textColor="@color/company_text_color"
    android:layout_marginLeft="20dip"
    android:layout_toRightOf="@+id/set_pw_name_tv"
    android:imeOptions="actionNext"
    android:password="true"
    />
    <ImageView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/login_change_username_line"  
    android:background="#00000000"   
    android:layout_marginLeft="15dip"
	android:layout_toRightOf="@+id/set_pw_name_tv"
	android:layout_below="@+id/set_pw_old_edit"
	android:layout_marginTop="5dip"
	android:id="@+id/set_pw_old_line"
      />  
  </RelativeLayout>   
  <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  
	android:layout_marginTop="20dip"
	android:layout_marginLeft="25dip"
	android:layout_marginRight="25dip"
      >
     <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="@dimen/menu_msg_title_size"
    android:textColor="@color/menu_mine_text_color"    
    android:layout_centerVertical="true"   
	android:id="@+id/set_pw_new_tv"
	android:text="@string/set_pw_new"
       />    
   <EditText 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:id="@+id/set_pw_new_edit"
    android:background="#00000000"
    android:hint="@string/hint_set_pw_new"
    android:textSize="@dimen/login_edit_size"
    android:maxLength="20"
    android:imeOptions="actionNext"
    android:singleLine="true"
    android:textColorHint="@color/company_btn_color"
    android:textColor="@color/company_text_color"
    android:layout_marginLeft="20dip"
    android:layout_toRightOf="@+id/set_pw_new_tv"
    android:password="true"
    />
    <ImageView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/login_change_pw_line"  
    android:background="#00000000"   
    android:layout_marginLeft="15dip"
	android:layout_toRightOf="@+id/set_pw_new_tv"
	android:layout_below="@+id/set_pw_new_edit"
	android:layout_marginTop="5dip"
	android:id="@+id/set_pw_set_line"
      />  
  </RelativeLayout> 
  <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  
	android:layout_marginTop="20dip"
	android:layout_marginLeft="25dip"
	android:layout_marginRight="25dip"
      >
     <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="@dimen/menu_msg_title_size"
    android:textColor="@color/menu_mine_text_color"    
    android:layout_centerVertical="true"   
	android:id="@+id/set_pw_ok_tv"
	android:text="@string/set_pw_ok"
       />    
   <EditText 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:id="@+id/set_pw_ok_edit"
    android:background="#00000000"
    android:textSize="@dimen/login_edit_size"
    android:maxLength="20"
    android:imeOptions="actionDone"
    android:singleLine="true"
    android:textColor="@color/company_text_color"
    android:layout_marginLeft="20dip"
    android:layout_toRightOf="@+id/set_pw_ok_tv"
    android:textColorHint="@color/company_btn_color"
    android:hint="@string/hint_set_pw_ok"
    android:password="true"
    />
    <ImageView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/login_change_pw_line"  
    android:background="#00000000"   
    android:layout_marginLeft="15dip"
	android:layout_toRightOf="@+id/set_pw_ok_tv"
	android:layout_below="@+id/set_pw_ok_edit"
	android:layout_marginTop="5dip"
	android:id="@+id/set_pw_ok_line"
      />  
  </RelativeLayout> 
 

      

</LinearLayout>