<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/my_center_layout">
 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_change_bg"
    android:id="@+id/my_canter_top_layout"
    android:orientation="horizontal"
     >
  <RelativeLayout 
    android:layout_width="50dip"
    android:layout_height="wrap_content"
    android:id="@+id/my_center_back_layout"  
    android:background="@drawable/change_login_back_selector"  
      
      >
   <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"   	
    android:src="@drawable/back_image"
    android:background="#00000000"   
    android:layout_centerInParent="true"         
       />   
  </RelativeLayout> 
    <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"   
    android:src="@drawable/login_change_top_line"
    android:background="#00000000"   
    android:layout_gravity="center"         
       />       
   <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="@dimen/title_size"
    android:textColor="@color/title_color"   
    android:text="@string/my_center" 
    android:layout_marginLeft="7dip"
    android:layout_gravity="center"  
       
       />    
 </LinearLayout>   
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"        
       >
    
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:background="@drawable/mine_layout_selector" 
    android:id="@+id/my_center_name_layout" 
    android:weightSum="10"
       >
    <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:textSize="@dimen/safe_setting_text_size"
    android:textColor="@color/safe_setting_text_color"    
    android:text="@string/my_center_name_title" 
    android:layout_marginTop="15dip"
    android:layout_marginBottom="15dip"  
    android:layout_marginLeft="15dip"   
    android:layout_weight="7"
       />        
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"   	 
	android:layout_gravity="right|center_vertical"  
    android:id="@+id/my_center_name_tv" 
    android:textSize="@dimen/safe_setting_edit_size"
    android:textColor="@color/safe_setting_edit_color"  
    android:layout_marginRight="15dip"  
    android:text="@string/my_center_hint_title"
    android:layout_weight="3"
       />     
          
   </LinearLayout> 
 <View 
    android:layout_width="match_parent"   
    android:layout_height="0.5dip"
    android:background="@color/mycenter_line_color"
    />     
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:background="@drawable/mine_layout_selector" 
    android:id="@+id/my_center_email_layout" 
    android:weightSum="10"
       >
    <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:textSize="@dimen/safe_setting_text_size"
    android:textColor="@color/safe_setting_text_color"    
    android:text="@string/my_center_email_title"  
    android:layout_marginTop="15dip"
    android:layout_marginBottom="15dip"  
    android:layout_marginLeft="15dip" 
    android:layout_weight="7"       
       />        
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"   	 
    android:gravity="right"   	 
	android:layout_gravity="right|center_vertical" 
    android:id="@+id/my_center_sex_tv" 
    android:textSize="@dimen/safe_setting_edit_size"
    android:textColor="@color/safe_setting_edit_color"  
    android:layout_marginRight="15dip" 
    android:text="@string/my_center_hint_title"
    android:layout_weight="3"
       />     
          
   </LinearLayout> 
 <View 
    android:layout_width="match_parent"   
    android:layout_height="0.5dip"
    android:background="@color/mycenter_line_color"
    />    
     <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mine_layout_selector" 
    android:id="@+id/my_center_phone_layout"  
    android:weightSum="10"
       >
    <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:textSize="@dimen/safe_setting_text_size"
    android:textColor="@color/safe_setting_text_color"     
    android:text="@string/my_center_phone_title" 
    android:layout_marginTop="15dip"
    android:layout_marginBottom="15dip"  
    android:layout_marginLeft="15dip"
    android:layout_weight="7"        
       />        
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"   	 
    android:gravity="right"   	 
	android:layout_gravity="right|center_vertical"   
    android:id="@+id/my_center_birthday_tv" 
    android:textSize="@dimen/safe_setting_edit_size"
    android:textColor="@color/safe_setting_edit_color" 
    android:layout_marginRight="15dip" 
    android:text="@string/my_center_hint_title" 
    android:layout_weight="3"
       />     
          
   </LinearLayout> 
 <View 
    android:layout_width="match_parent"   
    android:layout_height="0.5dip"
    android:background="@color/mycenter_line_color"
    />    
     <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mine_layout_selector" 
    android:id="@+id/my_center_role_layout"  
    android:weightSum="10"
       >
    <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:textSize="@dimen/safe_setting_text_size"
    android:textColor="@color/safe_setting_text_color"     
    android:text="@string/my_center_role_title" 
    android:layout_marginTop="15dip"
    android:layout_marginBottom="15dip"  
    android:layout_marginLeft="15dip"
    android:layout_weight="7"        
       />        
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"   	 
    android:gravity="right"   	 
	android:layout_gravity="right|center_vertical"   
    android:id="@+id/my_center_role_tv" 
    android:textSize="@dimen/safe_setting_edit_size"
    android:textColor="@color/safe_setting_edit_color" 
    android:layout_marginRight="15dip" 
    android:text="@string/my_center_hint_title" 
    android:layout_weight="3"
       />     
          
   </LinearLayout> 
</LinearLayout>    
</ScrollView>
</LinearLayout>