<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#b0000000" 
    android:id="@+id/popu_edit_layout">
  <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popu_exit_bg"
    android:layout_centerInParent="true" 
    android:orientation="vertical" 
     >     
  <RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip" 
    android:id="@+id/popu_exit_frist_layout" 
    android:background="@drawable/mine_layout_selector"
    android:layout_weight="1"
    android:layout_marginTop="1dip"
      >
  <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"  
    android:src="@drawable/popu_exit_btn_image"  
    android:background="#00000000"  
    android:id="@+id/popu_exit_btn_image" 
    android:layout_marginLeft="10dip" 
      />    
      
   <RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_toRightOf="@+id/popu_exit_btn_image"
    android:layout_marginLeft="30dip"  
    android:id="@+id/popu_edit_close_layout"        
       >
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textColor="@color/safe_setting_text_color" 
    android:textSize="@dimen/safe_setting_text_size"
    android:text="@string/popu_exit_frist_title" 
    android:id="@+id/popu_exit_title"           
      />        
       <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textColor="@color/safe_setting_edit_color" 
    android:textSize="@dimen/safe_setting_edit_size"
    android:text="@string/popu_exit_frist_note" 
    android:layout_below="@+id/popu_exit_title"
    android:id="@+id/popu_exit_note"           
      />       
      
   </RelativeLayout>   
  
      
  </RelativeLayout>  
    <View 
    android:layout_width="match_parent"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"     
    android:layout_height="1dip"
    android:background="@color/safe_setting_line_color"
    />  
  <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip" 
    android:id="@+id/popu_exit_second_layout" 
    android:background="@drawable/mine_layout_selector"
    android:layout_weight="1"
      >
  <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"  
    android:src="@drawable/popu_exit_out_image"  
    android:background="#00000000"  
    android:id="@+id/popu_exit_second_btn_image" 
    android:layout_marginLeft="10dip" 
      />    
      
   <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_toRightOf="@+id/popu_exit_second_btn_image"
    android:layout_marginLeft="30dip"  
    android:id="@+id/popu_edit_second_close_layout"        
       >
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textColor="@color/safe_setting_text_color" 
    android:textSize="@dimen/safe_setting_text_size"
    android:text="@string/popu_exit_second_title" 
    android:id="@+id/popu_exit_second_title"           
      />        
       <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textColor="@color/safe_setting_edit_color" 
    android:textSize="@dimen/safe_setting_edit_size"
    android:text="@string/popu_exit_second_note" 
    android:layout_below="@+id/popu_exit_second_title"
    android:id="@+id/popu_exit_second_note"           
      />       
      
   </RelativeLayout>   

  </RelativeLayout>  
    <View 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#00000000"
    />  
</LinearLayout>       
</RelativeLayout>