<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background" >
<RelativeLayout 
  	android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mine_layout_selector"
    android:id="@+id/menu_mine_mycenter_layout"  
    android:layout_marginTop="15dip"
    >
  <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginLeft="30dip"  
    android:src="@drawable/safe_setting_image"  
    android:background="#00000000" 
    android:id="@+id/menu_mine_mycenter_image" 
    android:layout_marginTop="30dip"
    android:layout_marginBottom="30dip"
      />  
    
  <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"  
    android:textSize="@dimen/menu_mine_text_size"
    android:textColor="@color/menu_mine_text_color"
    android:layout_marginLeft="20dip"
    android:layout_toRightOf="@+id/menu_mine_mycenter_image"
    android:text="@string/mycenter"  
           
      />  
    <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginRight="20dip" 
    android:src="@drawable/arrow"  
    android:background="#00000000" 
    android:layout_alignParentRight="true"
      />  
    
</RelativeLayout>    
<RelativeLayout 
  	android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mine_layout_selector"
    android:id="@+id/menu_mine_setting_layout"  
    android:layout_marginTop="10dip"
    >
  <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginLeft="30dip"  
    android:src="@drawable/safe_setting_image"  
    android:background="#00000000" 
    android:id="@+id/menu_mine_setting_image" 
    android:layout_marginTop="30dip"
    android:layout_marginBottom="30dip"
      />  
    
  <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"  
    android:textSize="@dimen/menu_mine_text_size"
    android:textColor="@color/menu_mine_text_color"
    android:layout_marginLeft="20dip"
    android:layout_toRightOf="@+id/menu_mine_setting_image"
    android:text="@string/setting"  
           
      />  
    <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginRight="20dip" 
    android:src="@drawable/arrow"  
    android:background="#00000000" 
    android:layout_alignParentRight="true"
      />  
    
</RelativeLayout>
<RelativeLayout 
  	android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mine_layout_selector"
    android:id="@+id/menu_mine_set_pwd_layout"  
    android:layout_marginTop="10dip"
    >
  <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginLeft="30dip"  
    android:src="@drawable/safe_setting_image"  
    android:background="#00000000" 
    android:id="@+id/menu_mine_set_pwd_image" 
    android:layout_marginTop="30dip"
    android:layout_marginBottom="30dip"
      />  
    
  <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"  
    android:textSize="@dimen/menu_mine_text_size"
    android:textColor="@color/menu_mine_text_color"
    android:layout_marginLeft="20dip"
    android:layout_toRightOf="@+id/menu_mine_set_pwd_image"
    android:text="@string/set_pwd"  
           
      />  
    <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginRight="20dip" 
    android:src="@drawable/arrow"  
    android:background="#00000000" 
    android:layout_alignParentRight="true"
      />  
    
</RelativeLayout>
<RelativeLayout 
  	android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mine_layout_selector"
    android:id="@+id/menu_mine_exit_layout"  
    android:layout_marginTop="10dip"
    >
  <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginLeft="30dip"  
    android:src="@drawable/safe_setting_image"  
    android:background="#00000000" 
    android:id="@+id/menu_mine_exit_image" 
    android:layout_marginTop="30dip"
    android:layout_marginBottom="30dip"
      />  
    
  <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"  
    android:textSize="@dimen/menu_mine_text_size"
    android:textColor="@color/menu_mine_text_color"
    android:layout_marginLeft="20dip"
    android:layout_toRightOf="@+id/menu_mine_exit_image"
    android:text="@string/exit"  
           
      />  
    <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginRight="20dip" 
    android:src="@drawable/arrow"  
    android:background="#00000000" 
    android:layout_alignParentRight="true"
      />  
    
</RelativeLayout>
</LinearLayout>